--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        <br>
        <p>Welcome to <a href="https://www.google.com/search?q=hotel+Maurya+residency+&hotel_occupancy=2&ei=a6y7Y4qkIs734-EP6tKQ6Ac&ved=0ahUKEwjKhbHd5rn8AhXO-zgGHWopBH0Q4dUDCA8&uact=5&oq=hotel+Maurya+residency+&gs_lcp=Cgxnd3Mtd2l6LXNlcnAQAzILCC4QgAQQxwEQrwEyCwguEIAEEMcBEK8BMg0ILhCvARDHARCABBAKMgUIABCABDIHCAAQgAQQCjINCC4QgAQQxwEQrwEQCjIHCAAQgAQQCjINCC4QgAQQxwEQrwEQCjILCC4QgAQQxwEQrwEyCwguEIAEEMcBEK8BOgoIABBHENYEELADOgUIABCGA0oECEEYAEoECEYYAFDBBVjHCmD5JmgCcAF4AIABmQKIAa4IkgEFMC4zLjKYAQCgAQHIAQjAAQE&sclient=gws-wiz-serp">Maurya Residency</a>, a cozy and comfortable place to stay in the heart of the city. Our hotel offers a variety of spacious and well-appointed rooms, all equipped with modern amenities and free WiFi. Whether you're here for business or leisure, we have everything you need to make your stay a memorable one.</p>
       <h2>Rooms</h2>
-      <p>We have a range of room types to suit different needs and budgets. Choose from standard rooms, deluxe rooms, and suites, all with private bathrooms and comfortable beds. Amenities include a flat-screen TV,air conditione, and coffee maker.</p>
+      <p>We have a range of room types to suit different needs and budgets. Choose from standard rooms, deluxe rooms, and suites, all with private bathrooms and comfortable beds. Amenities include a flat-screen TV, Air conditione, and coffee maker.</p>
       <ul type="1" >
         <li> Strandard Room:₹ 2000/per night</li>
         <li> Dleuxe Room   :₹ 2400/per night</li> 
